--- a/2018/summary(07-02~07-08).md
+++ b/2018/summary(07-02~07-08).md
@@ -5,7 +5,7 @@
 3. 写信息发布系统项目周报
 4. 在微信读书上读书2小时
 5. 练习英语口语1小时
->*注：作为项目负责人最好了解组员做过什么,怎么做的(视情况决定);*
+>*注：作为项目负责人最好了解组员做过什么，怎么做的(视情况决定)；*
 
 2018-07-03
 =============
