--- a/2018/summary(07-02~07-08).md
+++ b/2018/summary(07-02~07-08).md
@@ -10,5 +10,7 @@
 2018-07-03
 =============
 1. FreeCodeMap 写完js中292-307题
-2. 在微信读书上读书2小时
+2. 在微信读书上读书0.5小时
 3. 练习英语口语1.5小时
+4. 在牛客网上练习10道Java题
+5. 粗略学会markdown语法
