--- a/2018/summary(07-02~07-08).md
+++ b/2018/summary(07-02~07-08).md
@@ -14,3 +14,11 @@
 3. 练习英语口语1.5小时
 4. 在牛客网上练习10道Java题
 5. 粗略学会markdown语法
+
+2018-07-04
+=============
+1. 看vue商城系统视频
+2. 在微信读书上读书2小时
+3. 练习英语口语1小时
+4. 在牛客网上练习10道Java题
+5. 梳理davinci系统结构与技术(已fork)
