--- a/2018/summary(07-02~07-08).md
+++ b/2018/summary(07-02~07-08).md
@@ -21,3 +21,11 @@
 2. 练习英语口语0.5小时
 3. 在牛客网上练习10道Java题
 4. 梳理davinci系统结构与技术(已fork)
+
+2018-07-05
+=============
+1. 在微信读书上读书2小时
+2. 练习英语口语0.5小时
+3. 在牛客网上练习10道Java题
+4. 看4节vue商城视频
+5. FreeCodeMap 写完js中初级项目2个
