--- a/2018/summary(07-02~07-08).md
+++ b/2018/summary(07-02~07-08).md
@@ -24,8 +24,8 @@
 
 2018-07-05
 =============
-1. 在微信读书上读书2小时
+1. 在微信读书上读书1小时
 2. 练习英语口语0.5小时
 3. 在牛客网上练习10道Java题
 4. 看4节vue商城视频
-5. FreeCodeMap 写完js中初级项目2个
+5. FreeCodeMap 写完js初级项目2个
