--- a/2018/summary(07-02~07-08).md
+++ b/2018/summary(07-02~07-08).md
@@ -36,3 +36,10 @@
 2. 练习英语口语0.5小时
 3. 在牛客网上练习10道Java题
 4. FreeCodeMap 写完js初级项目1个
+
+2018-07-07
+=============
+1. 在微信读书上读书2.5小时
+2. 练习英语口语0.5小时
+3. 在牛客网上练习10道Java题
+4. 初次尝试使用vue
