--- a/2018/summary(07-02~07-08).md
+++ b/2018/summary(07-02~07-08).md
@@ -43,3 +43,11 @@
 2. 练习英语口语0.5小时
 3. 在牛客网上练习10道Java题
 4. 初次尝试使用vue
+
+2018-07-08
+=============
+1. 在微信读书上读书2小时
+2. 练习英语口语0.5小时
+3. 在牛客网上练习10道Java题
+4. 看3节vue商城视频
+5. 实践路由配置
