--- a/2018/summary(07-09~07-15).md
+++ b/2018/summary(07-09~07-15).md
@@ -8,3 +8,14 @@
 * 读书2小时
 * 练习英语口语0.5小时
 * 牛客网刷题10道
+
+# 2018-07-11
+* 读书2小时
+* 练习英语口语0.5小时
+* 牛客网刷题10道
+* 看3节vue商城视频
+
+# 2018-07-12
+* 读书2小时
+* 练习英语口语0.5小时
+* 看3节vue商城视频
