--- a/2018/summary(07-09~07-15).md
+++ b/2018/summary(07-09~07-15).md
@@ -19,3 +19,16 @@
 * 读书2小时
 * 练习英语口语0.5小时
 * 看3节vue商城视频
+
+# 2018-07-13
+* 读书2小时
+* 练习英语口语10分钟
+* 牛客网刷题20道
+
+# 2018-07-14
+* 读书5小时
+* 练习英语口语10分钟
+
+# 2018-07-15
+* 读书2小时
+* 练习英语口语10分钟
