--- a/2018/summary(07-23~07-29).md
+++ b/2018/summary(07-23~07-29).md
@@ -15,3 +15,13 @@
 * 读书2小时
 * 练习英语口语10分钟
 * 牛客网10道java题
+
+# 2018-07-27
+* 读书2小时
+* 练习英语口语10分钟
+* 牛客网10道java题
+
+# 2018-07-28
+* 读书2小时
+* 练习英语口语10分钟
+* 牛客网10道java题
