--- a/2018/summary(07-23~07-29).md
+++ b/2018/summary(07-23~07-29).md
@@ -26,7 +26,10 @@
 * 练习英语口语10分钟
 * 牛客网10道java题
 
-# 2018-07-28
+# 2018-07-29
 * 读书4小时
 * 练习英语口语10分钟
 * 牛客网10道java题
+* 练习30分钟打字
+* 学习30分钟算法
+>有什么决定,只要就算做了也不会有坏事,就马上执行,哪怕只有三分钟热度,也是做与没做的区别,也会有进步,也会有收获.
