--- a/2018/summary(07-30~08-05).md
+++ b/2018/summary(07-30~08-05).md
@@ -4,3 +4,10 @@
 * 牛客网10道java题
 * 练习20分钟打字
 * 学习30分钟算法(写出二叉树前置排序)
+
+# 2018-07-31
+* 读书2小时
+* 练习英语口语10分钟
+* 牛客网10道java题
+* 练习20分钟打字
+>现在刷算法题太早,基础不足,从《算法4》学起
