--- a/2018/summary(08-13~08-19).md
+++ b/2018/summary(08-13~08-19).md
@@ -28,3 +28,15 @@
 * 练习英语口语10分钟
 * 背30个英语单词
 * 牛客网10道java题
+
+# 2018-08-17
+* 读书5小时
+* 练习英语口语10分钟
+* 背60个英语单词
+* 牛客网10道java题
+
+# 2018-08-17
+* 读书5小时
+* 练习英语口语10分钟
+* 背80个英语单词
+* 牛客网10道java题
