--- a/2018/summary(08-20~08-26).md
+++ b/2018/summary(08-20~08-26).md
@@ -21,3 +21,15 @@
 * 练习英语口语10分钟
 * 背50个英语单词
 * 牛客网10道java题
+
+# 2018-08-24
+* 读书2小时
+* 练习英语口语10分钟
+* 背50个英语单词
+* 牛客网10道java题
+
+# 2018-08-25
+* 读书2小时
+* 练习英语口语10分钟
+* 背50个英语单词
+* 牛客网10道java题
