--- a/2018/summary(08-20~08-26).md
+++ b/2018/summary(08-20~08-26).md
@@ -29,7 +29,15 @@
 * 牛客网10道java题
 
 # 2018-08-25
-* 读书2小时
+* 读书1小时
 * 练习英语口语10分钟
 * 背50个英语单词
 * 牛客网10道java题
+
+
+# 2018-08-25
+* 读书1小时
+* 练习英语口语10分钟
+* 背50个英语单词
+* 牛客网10道java题
+>不能熬夜,真的特别累!!!,周末都废了!!!
