--- a/2018/summary(08-27~09-02).md
+++ b/2018/summary(08-27~09-02).md
@@ -15,3 +15,28 @@
 * 练习英语口语10分钟
 * 背50个英语单词
 * 牛客网10道java题
+
+# 2018-08-30
+* 读书1小时
+* 练习英语口语10分钟
+* 背50个英语单词
+* 牛客网10道java题
+
+# 2018-08-31
+* 读书1小时
+* 练习英语口语10分钟
+* 背50个英语单词
+* 牛客网10道java题
+
+# 2018-09-01
+* 读书1小时
+* 练习英语口语10分钟
+* 背50个英语单词
+* 牛客网10道java题
+
+
+# 2018-09-02
+* 读书1小时
+* 练习英语口语10分钟
+* 背50个英语单词
+* 牛客网10道java题
