--- a/2018/summary(09-03~09-09).md
+++ b/2018/summary(09-03~09-09).md
@@ -13,3 +13,12 @@
 * 练习英语口语10分钟
 * 背50个英语单词
 * 牛客网10道java题
+
+# 2018-09-06
+* 读书1小时
+
+# 2018-09-07
+* 读书1小时
+* 练习英语口语10分钟
+* 背50个英语单词
+* 牛客网10道java题
